saving old changes

--- a/tensorflow-js/colores-ml/index.html
+++ b/tensorflow-js/colores-ml/index.html
@@ -23,7 +23,7 @@
             Color:
             <input data-jscolor="{}" value="#3399FF" oninput="update(this.jscolor)">
             <div id="color-zone">
-                Mi ML web site
+                Mi ML web site. Tigrillo
             </div>
         </p>
     </div>
