--- a/self-driving-car-js/index.html
+++ b/self-driving-car-js/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
+    <script src="js/sensor.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/road.js"></script>
     <script src="js/controls.js"></script>
